# SLIME

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  LICENSE.txt  README.md  build.sh  run_slime.sh  starexec_build
3rd/NumCpp/: Coordinates.hpp  Core.hpp  Filter.hpp  Functions.hpp  ImageProcessing.hpp  Integrate.hpp  Linalg.hpp  NdArray.hpp  Polynomial.hpp  PythonInterface.hpp  Roots.hpp  Rotations.hpp  Special.hpp  Vector.hpp
3rd/NumCpp/Coordinates/: Coordinate.hpp  Dec.hpp  RA.hpp  degreeSeperation.hpp  radianSeperation.hpp
3rd/NumCpp/Core/: Constants.hpp  DataCube.hpp  DtypeInfo.hpp  Shape.hpp  Slice.hpp  Timer.hpp  Types.hpp
3rd/NumCpp/Core/Internal/: Endian.hpp  Error.hpp  Filesystem.hpp  StaticAsserts.hpp  StdComplexOperators.hpp  StlAlgorithms.hpp  TypeTraits.hpp  Version.hpp
3rd/NumCpp/Filter/Boundaries/: Boundary.hpp
3rd/NumCpp/Filter/Boundaries/Boundaries1d/: addBoundary1d.hpp  constant1d.hpp  mirror1d.hpp  nearest1d.hpp  reflect1d.hpp  trimBoundary1d.hpp  wrap1d.hpp
3rd/NumCpp/Filter/Boundaries/Boundaries2d/: addBoundary2d.hpp  constant2d.hpp  fillCorners.hpp  mirror2d.hpp  nearest2d.hpp  reflect2d.hpp  trimBoundary2d.hpp  wrap2d.hpp
3rd/NumCpp/Filter/Filters/Filters1d/: complementaryMedianFilter1d.hpp  convolve1d.hpp  gaussianFilter1d.hpp  maximumFilter1d.hpp  medianFilter1d.hpp  minimumFilter1d.hpp  percentileFilter1d.hpp  rankFilter1d.hpp  uniformFilter1d.hpp
3rd/NumCpp/Filter/Filters/Filters2d/: complementaryMedianFilter.hpp  convolve.hpp  gaussianFilter.hpp  laplace.hpp  maximumFilter.hpp  medianFilter.hpp  minimumFilter.hpp  percentileFilter.hpp  rankFilter.hpp  uniformFilter.hpp
3rd/NumCpp/ImageProcessing/: Centroid.hpp  Cluster.hpp  ClusterMaker.hpp  Pixel.hpp  applyThreshold.hpp  centroidClusters.hpp  clusterPixels.hpp  generateCentroids.hpp  generateThreshold.hpp  windowExceedances.hpp
3rd/NumCpp/Linalg/: cholesky.hpp  det.hpp  gaussNewtonNlls.hpp  hat.hpp  inv.hpp  lstsq.hpp  lu_decomposition.hpp  matrix_power.hpp  multi_dot.hpp  pinv.hpp  pivotLU_decomposition.hpp  solve.hpp  svd.hpp
3rd/NumCpp/Linalg/svd/: SVDClass.hpp
3rd/NumCpp/NdArray/: NdArrayCore.hpp  NdArrayIterators.hpp  NdArrayOperators.hpp
3rd/NumCpp/Polynomial/: Poly1d.hpp
3rd/NumCpp/PythonInterface/: BoostInterface.hpp  BoostNumpyNdarrayHelper.hpp  PybindInterface.hpp
3rd/NumCpp/Random/: RNG.hpp  bernoulli.hpp  beta.hpp  binomial.hpp  cauchy.hpp  chiSquare.hpp  choice.hpp  discrete.hpp  exponential.hpp  extremeValue.hpp  f.hpp  gamma.hpp  generator.hpp  geometric.hpp  laplace.hpp  lognormal.hpp  negativeBinomial.hpp  nonCentralChiSquared.hpp  normal.hpp  permutation.hpp  poisson.hpp  rand.hpp  randFloat.hpp  randInt.hpp  randN.hpp  shuffle.hpp  standardNormal.hpp  studentT.hpp  triangle.hpp  uniform.hpp  uniformOnSphere.hpp  weibull.hpp
3rd/NumCpp/Roots/: Bisection.hpp  Brent.hpp  Dekker.hpp  Iteration.hpp  Newton.hpp  Secant.hpp
3rd/NumCpp/Rotations/: DCM.hpp  Quaternion.hpp
3rd/NumCpp/Vector/: Vec2.hpp  Vec3.hpp
3rd/dezero/: core.hpp  core_simple.hpp  dezero.hpp  functions.hpp  layers.hpp  models.hpp  optimizers.hpp  utils.hpp
SLIME/: CMakeLists.txt  LICENSE  LICENSE.txt  Makefile  build.sh  build_cloud.sh  build_unix.sh  make_combined_hostfile.py  mpi-run.sh  starexec_build  starexec_description.txt  test.cnf
SLIME/doc/sc2022/: conference_101719.tex
SLIME/include/: Dimacs.h  Options.h  ParseUtils.h  SimpSolver.h  Solver.h  SolverTypes.h  ccnr.h
SLIME/mtl/: Heap.h  Map.h  Queue.h
SLIME/report/Job49749_page/: job.html
SLIME/report/Job49749_page/js/details/: job.js
SLIME/report/Kissat_MAB_VS_SLIME_Gravity/js/: master.js
SLIME/report/Kissat_MAB_VS_SLIME_Gravity/js/common/: delaySpinner.js
SLIME/src/: Ls.cc  Main.cc  Options.cc  SimpSolver.cc  Solver.cc  ccnr.cc  ipasirslimeglue.cc
SLIME_CERBERO/: Readme.md  slime
break_id/: Algebraic.cpp  Algebraic.hpp  BreakID.hh  Breaking.cpp  Breaking.hpp  CMakeLists.txt  Graph.cpp  Graph.hpp  LICENSE  README.md  Theory.cpp  Theory.hpp  global.cpp  global.hpp  saucy.cpp  saucy.hpp
doc/sc2022/benchmarks/: conference_101719.tex
include/: Dimacs.h  ParseUtils.h  Solver.h
mtl/: Alg.h  Alloc.h  Map.hZone.Identifier  Sort.h  Vec.h  XAlloc.h
report/Kissat_MAB_VS_SLIME_Gravity/: job.html
sc2022-riveros-benchmarks/: 3d_perfect_euler_bricks.py  4d_euler_bricks.py  4d_perfect_euler_bricks.py  brocard_problem.py  brocard_problem_large.py  h31.py  h31_large.py  h31_xl.py  sum_of_three_cubes_165_known_representation.py  sum_of_three_cubes_165_unknown_representation.py  sum_of_three_cubes_33_known_representation.py  sum_of_three_cubes_33_unknown_representation.py  sum_of_three_cubes_3_known_representation.py  sum_of_three_cubes_3_unknown_representation.py  sum_of_three_cubes_42_known_representation.py  sum_of_three_cubes_42_unknown_representation.py  sum_of_three_cubes_906_known_representation.py  sum_of_three_cubes_906_unknown_representation.py  sum_of_three_cubes_still_open.py  sum_of_three_cubes_still_open_large.py
src/: Ls.cc  Main.cc  Options.cc  SimpSolver.cc  Solver.cc
variations/: README.md  slime-deep-learning
